<resources>
    <string name="app_name">Fitmit</string>
    <!-- Primera ventana-->
    <string name="splashScreenImageDescription">Logo principal</string>
    <!-- Ventana Login-->
    <string name="emailLabel">Email</string>
    <string name="passwordLabel">Contraseña</string>
    <string name="loginLabel">Iniciar sesión</string>
    <string name="loginLabelGoogle">Iniciar sesión con Google</string>
    <string name="forgotPasswordText">Olvidé mi contraseña</string>
    <string name="registrarmeButtonText">¿No tienes cuenta? Regístrate</string>
    <!-- Ventana Registro -->
    <string name="registroLabel">Registro</string>
    <string name="emailLabelRegistro">Escribe tu email</string>
    <string name="nombreLabelRegistro">Escribe tu nombre</string>
    <string name="passwordLabelRegistro">Escribe tu contraseña</string>
    <string name="numeroLabelRegistro">Escribe tu número</string>
    <string name="checkBoxRegistroText">Acepto los </string>
    <string name="registroLabelButtonText">Registrarme</string>
    <string name="volverLoginButtonText">¿Ya tienes cuenta? Inicia sesión</string>

</resources>