<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="60dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="160dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/logo"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="70dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white"
                        android:gravity="bottom">
                        <EditText
                            android:id="@+id/emailLoginCampo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/text_box"
                            android:hint="@string/emailLabel"
                            android:padding="20dp"
                            android:inputType="textEmailAddress"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginBottom="7dp"
                        android:background="@color/white"
                        android:gravity="bottom">
                        <EditText
                            android:id="@+id/passwordLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/text_box"
                            android:hint="@string/passwordLabel"
                            android:padding="20dp"
                            android:inputType="textPassword"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/forgetPasswordButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textAlignment="viewEnd"
                        android:text="@string/forgotPasswordText"
                        android:textColor="@color/primario1"
                        android:textSize="14sp"
                        />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/procesaLoginButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/primario1"
                        android:textColor="@color/white"
                        android:text="@string/loginLabel"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/loginGoogleButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@color/primario1"
                        android:textColor="@color/white"
                        android:text="@string/loginLabelGoogle"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/registrarmeButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="@string/registrarmeButtonText"
                        android:textColor="@color/primario1"
                        android:textSize="14sp"
                        />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
    <ProgressBar
        android:id="@+id/pBarLogin"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:indeterminateTint="@color/primario1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>