<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="145dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/logo"
                        android:layout_marginBottom="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registroLabel"
                        android:layout_gravity="center_horizontal"
                        android:textSize="23sp"
                        android:textColor="@color/primario1"
                        android:textStyle="bold"
                        />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white"
                        android:gravity="bottom">
                        <EditText
                            android:id="@+id/emailRegistroCampo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/text_box"
                            android:hint="@string/emailLabelRegistro"
                            android:padding="20dp"
                            android:inputType="textEmailAddress"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white"
                        android:gravity="bottom">
                        <EditText
                            android:id="@+id/nombreRegistroCampo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/text_box"
                            android:hint="@string/nombreLabelRegistro"
                            android:padding="20dp"
                            android:inputType="textPersonName"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white"
                        android:gravity="bottom">
                        <EditText
                            android:id="@+id/passwordRegistroCampo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/text_box"
                            android:hint="@string/passwordLabelRegistro"
                            android:padding="20dp"
                            android:inputType="textPassword"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white"
                        android:gravity="bottom">
                        <EditText
                            android:id="@+id/numeroRegistroCampo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/text_box"
                            android:hint="@string/numeroLabelRegistro"
                            android:padding="20dp"
                            android:inputType="number|phone"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <CheckBox
                            android:id="@+id/chboxRegistro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ch"/>
                        <TextView
                            android:id="@+id/terminosLabelRegistro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="tv"
                            android:clickable="true"/>
                    </LinearLayout>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/procesaRegistroButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/primario1"
                        android:textColor="@color/white"
                        android:text="@string/registroLabelButtonText"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/volverLoginButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="@string/volverLoginButtonText"
                        android:textColor="@color/primario1"
                        android:textSize="14sp"
                        android:padding="2dp"
                        />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/pBarRegistro"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:indeterminateTint="@color/primario1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>